Log Interface/objects/LogInterface__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FailQuantity__c</fullName>
        <label>Fail Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interface__c</fullName>
        <label>Interface</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <label>StatusCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuccessQuantity__c</fullName>
        <label>SuccessQuantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalQuantity__c</fullName>
        <label>TotalQuantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LogInterfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LogInterface</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>SuccessQuantity__c</columns>
        <columns>FailQuantity__c</columns>
        <columns>TotalQuantity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Recent</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>SuccessQuantity__c</columns>
        <columns>FailQuantity__c</columns>
        <columns>TotalQuantity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Recent</label>
    </listViews>
    <listViews>
        <fullName>Recent_Account</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Interface__c</columns>
        <columns>Status__c</columns>
        <columns>FailQuantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>InsertCustomerECC</value>
        </filters>
        <label>Recent - Account</label>
    </listViews>
    <listViews>
        <fullName>Recent_InsertSalesOrderECC</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Interface__c</columns>
        <columns>Status__c</columns>
        <columns>FailQuantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Integracao Ecc</value>
        </filters>
        <label>Recent - Integração ECC</label>
    </listViews>
    <nameField>
        <label>LogInterface Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LogInterfaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>